@@ -4,6 +4,8 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** Bug fixes
 
+  cp now preserves "capabilities" also when preserving file ownership.
+
   ls --color once again honors the 'NORMAL' dircolors directive.
   [bug introduced in coreutils-6.11]
 
